# voice-activated-assistant.py

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  PRD.md  README.md  TODO.md  main.py  opencode.json  pyproject.toml  requirements.txt  test_opencc.py
.sisyphus/drafts/: voice-assistant-plan.md
config/: config.yaml  rules.json
docs/: PRD.md  TODO.md  aider_guide.md  project_tasks.md
graphify-out/: GRAPH_REPORT.md  graph.json
src/: __init__.py  asr_worker.py  audio_input.py  bench_gpu.py  check_speakers.py  logging_config.py  main.py  orchestrator.py  rule_engine.py  tts_worker.py  vad_segmenter.py
