[project]
name = "voice-activated-assistant-py"
version = "0.1.0"
description = "Voice-activated assistant using Qwen3-ASR and Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "silero-vad>=0.0.4",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
